function(add_file_and_link_without_filetype filename termination)
    string(REGEX REPLACE ${filename} "" exe termination)
    add_executable(${exe} ${filename})
    if (DEBUG_LIB)
        link_libraries(${exe} debug CryptoBreaker )
    else (DEBUG_LIB)
        link_libraries(${exe} optimized CryptoBreaker )
    endif (DEBUG_LIB)
endfunction(add_file_and_link_without_filetype)

add_subdirectory(set1)
